# ns3-roce

./: .gitignore  Dockerfile  Makefile  README.md  build-netanim.sh
.devcontainer/: devcontainer.json
analysis/: .gitignore  README.md
analysis/config/: README.md  default_config.json
analysis/config/topologies/: ft16.json
analysis/plots/: README.md
analysis/python/: default_config.json  fat_tree_generator.py  loss_sim.py  project.py  pyutils.py  tmp5je8bltb  topology.py
analysis/python/config/: default_config.json
analysis/python/in/: config.json.jinja  config.txt.jinja  flow.json  topology.json
analysis/rust/: Cargo.toml
analysis/rust/src/: ag.rs  gilbert_elliott.rs  lib.rs  main.rs  sim.rs
analysis/rust/src/ag/: mod.rs  node.rs
analysis/rust/src/sim/: event.rs  mod.rs  queue.rs  time.rs
analysis/rust2/: Cargo.toml
analysis/rust2/src/ag/: config.rs  mod.rs  ring.rs
analysis/rust2/src/sim/: data.rs  mod.rs  queue.rs  simulator.rs  time.rs
analysis/src/: README.md  project.py  pyutils.py  simulation.py
analysis/src/models/: ft16.py  unicast.py
analysis/src/pr/: efficiency.py
analysis/src/topology/: spineleaf.py
analysis/trace_reader/: .gitignore
doc/: config.md
rdma-config/: config.json  default-config.json  default-flows.json  default-topology.json  flow.json  groups.json  plot_qlen.py  topology.json  trace.json
rdma-config/examples/: ex-flow.json  ex-topo-binary-tree.json
rdma-config/examples/binary-tree/: config.json  flow.json  topology.json
simulation/: .lock-ns3_linux_build  wscript
simulation/examples/tutorial/: third.cc
simulation/mix/: .gitignore  config_doc.txt  flow.txt
simulation/mix/my/: groups.json  groups.toml  myconfig.json  myconfig.txt  myflow.json  myflow.txt  myqlen.txt  mytopology.json  mytopology.txt
simulation/scratch/: rdma-ag.cc  rdma.cc  third.cc
simulation/src/applications/: wscript
simulation/src/applications/helper/: rdma-client-helper.cc
simulation/src/applications/model/: rdma-client.cc  rdma-client.h
simulation/src/config-store/: wscript
simulation/src/core/: wscript
simulation/src/core/model/: log.cc  log.h  simulation-singleton.h  singleton.h
simulation/src/internet/: wscript
simulation/src/network/: wscript
simulation/src/network/model/: net-device.h  node.cc  node.h
simulation/src/network/utils/: data-rate.cc  data-rate.h  queue.h
simulation/src/point-to-point/: wscript
simulation/src/point-to-point/helper/: qbb-helper.cc
simulation/src/point-to-point/model/: point-to-point-channel.h  point-to-point-net-device.h  qbb-net-device.cc  rdma-bth.cc  rdma-bth.h  rdma-hw.cc  rdma-hw.h  rdma-queue-pair.cc  rdma-queue-pair.h  switch-node.cc
simulation/src/rdma/: CMakeLists.txt  wscript
simulation/src/rdma-ag/: CMakeLists.txt  ag-flow-mcast-phase.cc  ag-flow-mcast-phase.h  ag-runtime.cc
simulation/src/rdma-core/: CMakeLists.txt
simulation/src/rdma-core/app/: rdma-config.cc  rdma-config.h  rdma-flow.cc  rdma-network.cc  rdma-network.h  rdma-pfc-monitor.cc  rdma-switch-buffer-monitor.h  rdma-tx-monitor.h
simulation/src/rdma-core/app/flows/: rdma-flow-bisection.cc  rdma-flow-bisection.h  rdma-flow-multicast.cc  rdma-flow-multicast.h  rdma-flow-unicast.h
simulation/src/rdma-core/app/modules/: rdma-mod-anim.cc  rdma-mod-anim.h  rdma-mod-stats.cc  rdma-mod-stats.h
simulation/src/rdma-core/helper/: filesystem.cc  json.h  rdma-helper.cc  rdma-helper.h  rdma-reflection-helper.cc  rdma-reflection-helper.h  rdma-serdes.h
simulation/src/rdma-core/model/: broadcom-egress-queue.h  cn-header.h  custom-header.h  data-rate-ops.cc  pause-header.cc  qbb-header.cc  qbb-helper.cc  qbb-helper.h  qbb-net-device.h  qbb-remote-channel.cc  rdma-bth.cc  rdma-hw.cc  rdma-queue-pair.cc  rdma-random.cc  rdma-random.h  rdma-reliable-qp.h  rdma-seq-header.cc  switch-mmu.h
simulation/src/rdma-core/serdes/schemas/: ag-bitmaps.avsc  ag-recv-chunk-record.avsc
simulation/src/rdma-core/serdes/scripts/: gen-avro-headers.sh
simulation/src/rdma/ag/: ag-app-helper.cc  ag-app-helper.h  ag-app.cc  ag-app.h  ag-config.cc  ag-config.h  ag-runtime.cc  ag-runtime.h  ag-shared.cc  ag-shared.h
simulation/src/rdma/allgather/: circle.h  recovery.cc  recovery.h
simulation/src/rdma/app/: rdma-allgather-helper.cc  rdma-allgather-helper.h  rdma-allgather.cc  rdma-allgather.h  rdma-anim.cc  rdma-config-module.cc  rdma-config-module.h  rdma-config.cc  rdma-config.h  rdma-flow-scheduler.cc  rdma-flow-scheduler.h  rdma-flow.cc  rdma-flow.h  rdma-network.cc  rdma-network.h  rdma-pfc-monitor.h  rdma-qlen-monitor.cc  rdma-qlen-monitor.h  rdma-qp-monitor.cc  rdma-qp-monitor.h  rdma-switch-buffer-monitor.cc  rdma-tx-monitor.cc  rdma-unicast-app-helper.cc  rdma-unicast-app-helper.h  rdma-unicast-app.cc  rdma-unicast-app.h  sim-setting.h
simulation/src/rdma/app/flows/: rdma-flow-unicast.cc
simulation/src/rdma/helper/: filesystem.cc  filesystem.h  rdma-helper.cc  rdma-helper.h  rdma-reflection-helper.cc  rdma-reflection-helper.h
simulation/src/rdma/model/: ag-circle.h  ag-recovery.cc  ag-recovery.h  broadcom-egress-queue.cc  broadcom-egress-queue.h  custom-header.cc  custom-header.h  data-rate-ops.cc  data-rate-ops.h  pause-header.h  qbb-channel.cc  qbb-channel.h  qbb-header.h  qbb-helper.cc  qbb-helper.h  qbb-net-device.cc  qbb-net-device.h  qbb-remote-channel.cc  qbb-remote-channel.h  rdma-bth.cc  rdma-bth.h  rdma-client-helper.cc  rdma-client-helper.h  rdma-client.cc  rdma-client.h  rdma-driver.cc  rdma-driver.h  rdma-hw.cc  rdma-hw.h  rdma-queue-pair.cc  rdma-queue-pair.h  rdma-random.cc  rdma-reliable-qp.cc  rdma-reliable-qp.h  rdma-seq-header.h  rdma-unreliable-qp.cc  rdma-unreliable-qp.h  switch-mmu.cc  switch-mmu.h  switch-node.cc  (+2 more)
simulation/src/rdma/serdes/: ag-recv-chunk-record.h  rdma-serdes.h
simulation/src/rdma/serdes/schemas/: ag-recv-chunk-record.avsc  gen-avro-headers.sh  pfc-record.avsc  qp-record.avsc  sw-mem-record.avsc  tx-record.avsc
simulation/waf-tools/: cflags.py
