find_package(reflectcpp REQUIRED)
find_library(libavrocpp avrocpp REQUIRED)

if(reflectcpp_FOUND)
  build_lib(
    LIBNAME rdma
    SOURCE_FILES
      ag/ag-app.cc
      ag/ag-app-helper.cc
      ag/ag-config.cc
      ag/ag-runtime.cc
      ag/ag-shared.cc
      app/rdma-flow.cc
      app/rdma-flow-scheduler.cc
      app/rdma-network.cc
      app/rdma-switch-buffer-monitor.cc
      app/rdma-pfc-monitor.cc
      app/rdma-tx-monitor.cc
      app/flows/rdma-flow-unicast.cc
      helper/filesystem.cc
      helper/rdma-helper.cc
      helper/rdma-reflection-helper.cc
      model/broadcom-egress-queue.cc
      model/cn-header.cc
      model/custom-header.cc
      model/data-rate-ops.cc
      model/int-header.cc
      model/pause-header.cc
      model/pint.cc
      model/qbb-channel.cc
      model/qbb-header.cc
      model/qbb-helper.cc
      model/qbb-net-device.cc
      model/qbb-remote-channel.cc
      model/rdma-bth.cc
      model/rdma-hw.cc
      model/rdma-queue-pair.cc
      model/rdma-random.cc
      model/rdma-reliable-qp.cc
      model/rdma-seq-header.cc
      model/rdma-unreliable-qp.cc
      model/switch-mmu.cc
      model/switch-node.cc
      ag/ag-app.cc
      ag/ag-app-helper.cc
      ag/ag-config.cc
      ag/ag-runtime.cc
      ag/ag-shared.cc
      app/rdma-config.cc
      app/rdma-config-module.cc
      app/rdma-flow.cc
      app/rdma-network.cc
      app/rdma-switch-buffer-monitor.cc
      app/rdma-qp-monitor.cc
      helper/rdma-helper.cc
      helper/rdma-reflection-helper.cc
      model/broadcom-egress-queue.cc
      model/cn-header.cc
      model/custom-header.cc
      model/data-rate-ops.cc
      model/int-header.cc
      model/pause-header.cc
      model/pint.cc
      model/qbb-channel.cc
      model/qbb-header.cc
      model/qbb-helper.cc
      model/qbb-net-device.cc
      model/qbb-remote-channel.cc
      model/rdma-bth.cc
      model/rdma-hw.cc
      model/rdma-queue-pair.cc
      model/rdma-random.cc
      model/rdma-reliable-qp.cc
      model/rdma-seq-header.cc
      model/rdma-unreliable-qp.cc
      model/switch-mmu.cc
      model/switch-node.cc   
      app/modules/rdma-mod-stats.cc     
    HEADER_FILES
      serdes/generated/ag-recv-chunk-record.h
      serdes/generated/pfc-record.h
      serdes/generated/tx-record.h
      serdes/generated/sw-mem-record.h
      serdes/generated/qp-record.h
      ag/ag-app.h
      ag/ag-app-helper.h
      ag/ag-config.h
      ag/ag-runtime.h
      ag/ag-shared.h
      app/rdma-config.h
      app/rdma-config-module.h
      app/rdma-flow.h
      app/rdma-flow-scheduler.h
      app/rdma-network.h
      app/rdma-switch-buffer-monitor.h
      app/rdma-tx-monitor.h
      app/rdma-pfc-monitor.h
      app/rdma-qp-monitor.h
      app/flows/rdma-flow-unicast.h
      helper/filesystem.h
      helper/json.h
      helper/rdma-helper.h
      helper/rdma-reflection-helper.h
      helper/rdma-serdes.h
      model/broadcom-egress-queue.h
      model/cn-header.h
      model/custom-header.h
      model/data-rate-ops.h
      model/int-header.h
      model/pause-header.h
      model/pint.h
      model/qbb-channel.h
      model/qbb-header.h
      model/qbb-helper.h
      model/qbb-net-device.h
      model/qbb-remote-channel.h
      model/rdma-bth.h
      model/rdma.h
      model/rdma-hw.h
      model/rdma-queue-pair.h
      model/rdma-random.h
      model/rdma-reliable-qp.h
      model/rdma-seq-header.h
      model/rdma-unreliable-qp.h
      model/switch-mmu.h
      model/switch-node.h
      model/trace-format.h
      app/modules/rdma-mod-stats.h
    LIBRARIES_TO_LINK
      reflectcpp
      ${libavrocpp}
      ${libinternet}
      ${libnetwork}
      ${libpoint-to-point}
      ${libapplications}
  )
endif()